# Avestan

./: .gitignore  CMakeLists.txt  README.md  ToDo.txt  licence.txt  my_cmake.bat  readme.html
appendix/: OpenLink.reg  OpenWithAvesta.reg  PromptHere.reg  SetAvestaAsDefault.reg  readme.txt
bin64/: callback.py
man/: changelog.csv  changelog.xml  changelog000.csv  changelog010.csv  changelog020.csv  command.csv  command.txt  command.xml  history.html  history.xml  history.xsl  index.html  index.xml  keyboard.xml  keyboard.xsl  manual.css  manual.xsl  mouse.xml  mouse.xsl  path.html
opt/: BashHere.bash_login.txt  BashHere.bat  ExtractURL.pyw  dumptree.cmd  jpeg2jpg.cmd  readme.txt  rmemptydir.cmd  rmemptydir.py
src/: .clang-format  Avesta.sln  Tools.sln  readme.compile.txt
src/WTL10_10320_Release/Include/: atlapp.h
src/avesta/: commandline.cpp  dialog.cpp  dialog_name.cpp  dialog_path.cpp  file.cpp  fileop.cpp  itemid.cpp  registry.cpp  theme.cpp  thread.cpp  window.cpp  xmlcmd.cpp  xmlmessage.cpp  xmlparse.cpp  xmlreader.cpp  xmlwriter.cpp
src/client/: avesta.exe.manifest  client.cpp  client.rc  client.vcproj  client.vcxproj  resource.h
src/include/: afx.hpp  application.hpp  avesta.hpp  basic.hpp  drawing.hpp  error.hpp  io.hpp  math.hpp  message.hpp  meta.hpp  mew.hpp  object.hpp  path.hpp  preprocessor.hpp  pygmy.hpp  reference.hpp  shell.hpp  signal.hpp  storage.hpp  string.hpp  struct.hpp  theme.hpp  thread.hpp  widgets.client.hpp  widgets.hpp  xml.hpp
src/include/detail/: headers.hpp  objectimpl.hpp  uuids.hpp
src/include/impl/: InitUtil.hpp  WTLControls.hpp  WTLSplitter.hpp
src/include/std/: algorithm.hpp  array_map.hpp  array_set.hpp  buffer.hpp  deque.hpp  hash_map.hpp  list.hpp  map.hpp  sequence.hpp  set.hpp  str.hpp  vector.hpp
src/mew/: DragDrop.cpp  Entry.cpp  Folder.cpp  afx.cpp  command.cpp  debug.cpp  dialogs.cpp  expose.cpp  gesture.cpp  imagelist.cpp  io.cpp  keymap.cpp  message.cpp  messenger.cpp  private.h  registrar.cpp  string.cpp  variant.cpp  version.cpp
src/mew/widgets/: DefaultTreeItem.cpp  Display.cpp  Form.cpp  MenuProvider.cpp  MenuProvider.hpp  Preview.cpp  ReBar.cpp  ShellFolder.cpp  ShellFolder.h  ShellListView.cpp  ShellNotify.h  StatusBar.cpp  Tab.cpp  ToolBar.cpp  TreeView.cpp  WallPaperDialog.cpp  WindowExtension.h  WindowImpl.cpp  WindowImpl.h  WindowMessage.h
src/pygmy/: main.cpp  pygmy.def  pygmy.hpp  pygmy.vcproj  pygmy.vcxproj  stdafx.cpp  stdafx.h
src/server/: AvestaDialog.cpp  AvestaSDK.hpp  CommandHandler.hpp  CommandList.hpp  CommandProvider.hpp  ExecuteCommand.cpp  FolderList.cpp  FolderList.hpp  FolderTree.cpp  Globals.cpp  NavigateCommand.cpp  RenameDialog.cpp  ShellStorage.cpp  TaskTrayProvider.hpp  XmlForm.cpp  XmlResource.cpp  callback.cpp  command.hpp  main.cpp  main.hpp  resource.h  server.rc  server.vcproj  server.vcxproj  server.vcxproj.filters  stdafx.cpp  stdafx.h  utils.cpp  utils.hpp
src/tools-clipboard/: clipboard.def  clipboard.vcproj  main.cpp  stdafx.cpp  stdafx.h
tools/: clean.bat  cmd2hdr.py  cmd2txt.py  cmd2xml.py  difference.bat  log2xml.py  manual.bat  upload.bat
usr/: callback.py  form.xml  keyboard-folder.xml  keyboard-form.xml  keyboard-global.xml  keyboard-preview.xml  keyboard-tree.xml  keyboard.xsl  link.xml  menu.xml  mouse-folder.xml  mouse-form.xml  mouse-tree.xml  profile.ini  readme.txt  status.xml  sysmenu.xml  tool.xml
usr/link/: My Documents.lnk
var/: DeleteFolderSettings.bat  readme.txt
